--- a/src/form.css
+++ b/src/form.css
@@ -1,4 +1,4 @@
-form {
+#pizza-form {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -11,6 +11,7 @@ form {
     width: 55%;
     min-width: 870px;
     justify-content: space-around;
+    align-items: stretch;
 }
 
 #toppings {
@@ -46,5 +47,6 @@ h3 {
 }
 
 #order-button {
-    margin: 10%;
+    
+    margin: 15% auto;
 }
